<resources>
    <string name="app_name">JobSeek</string>

    <string name="upload_logo">Upload Logo</string>
    <string name="job_specialization">Job Specialization</string>
    <string name="ask_job_title">What is the job title?</string>
    <string name="ask_company_name">What is your company name?</string>
    <string-array name="job_specialization_group">
        <item>select a job specialization</item>
        <item>Accounting</item>
        <item>Admin</item>
        <item>Audit</item>
        <item>Beauty</item>
        <item>Cleaning</item>
        <item>Construction</item>
        <item>Customer Service</item>
        <item>Education</item>
        <item>Finance</item>
        <item>Healthcare</item>
        <item>Human Resources</item>
        <item>Information Technology</item>
        <item>Legal</item>
        <item>Manufacturing</item>
        <item>Marketing</item>
        <item>Media</item>
        <item>Real Estate</item>
        <item>Retail</item>
        <item>Sales</item>
        <item>Software Engineering</item>
        <item>Telecommunications</item>
    </string-array>
    <string name="full_time">Full Time</string>
    <string name="part_time">Part Time</string>
    <string name="internship">Internship</string>
    <string-array name="state_group">
        <item>Select a State</item>
        <item>Johor</item>
        <item>Kedah</item>
        <item>Kelantan</item>
        <item>Malacca</item>
        <item>Negeri Sembilan</item>
        <item>Pahang</item>
        <item>Penang</item>
        <item>Perak</item>
        <item>Perlis</item>
        <item>Selangor</item>
        <item>Terengganu</item>
        <item>Wilayah Persekutuan Kuala Lumpur</item>
    </string-array>
    <string name="job_responsibility">Job Responsibility</string>
    <string name="post">Post</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="saving">Saving...</string>
    <string name="job_highlight">Job Highlight</string>
    <string name="skills">Skills</string>
    <string name="qualification">Qualification</string>
    <string name="year_of_experience">Years of Experience</string>
    <string name="delete">Delete</string>
    <string name="delete_confirmation">Confirm to delete this record? </string>
    <string name="error_specialization">Please select a job specialization</string>
    <string name="rm">RM </string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home\n</string>
    <string name="title_notifications">Notifications\n</string>
    <string name="title_profile">Profile</string>
    <string name="title_headhunting">Head Hunting</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="status">Status</string>
    <string name="profile">Profile</string>
    <string name="upload_resume"> Upload Resume</string>
    <string name="upload">Upload</string>
    <string name="applied_job">Applied Job</string>
    <string name="view">View</string>
    <string name="setting">Setting</string>
    <string name="about_us">About Us</string>
    <string name="delete_acc">Delete Account</string>
    <string name="logout">Log Out</string>
    <string name="reset_password">Reset Password</string>
    <string name="desc_reset_password">Please enter your new password to continue</string>
    <string name="new_password">New Password</string>
    <string name="search_candidates">Search for candidates</string>
    <string name="candi_name">Name</string>
    <string name="candi_field">Field</string>
    <string name="candi_experience">Experience</string>
    <string name="candi_location">Location</string>
    <string name="candiQualification"><u>Qualification</u></string>
    <string name="candiExperience">Working Experience</string>
    <string name="candiSchool">School</string>
    <string name="candiEducation"><u>Education</u></string>
    <string name="candiLevel">Level</string>
    <string name="candiCGPA">CGPA</string>
    <string name="jobApplied">Job Applied</string>

    <string name="candi_education">Education</string>

    <!-- HOME -->
    <string name="filter_content">Filter your job</string>
    <string name="search_tips">Search Job...</string>

    <!-- Job Details -->
    <string name="job_title">Job Title</string>
    <string name="company_name">Company Name</string>
    <string name="location">Location</string>
    <string name="salary">Salary</string>
    <string name="employment_type_title">Employment Type:</string>
    <string name="employment_type">Type</string>
    <string name="state">State</string>
    <string name="job_special_title">Job Specialization:</string>
    <string name="job_special">Job Specialization</string>
    <string name="job_res_title">Job Responsibility:</string>
    <string name="job_res">Job Responsibility</string>
    <string name="qualification_title">Qualification:</string>
    <string name="skill_title">Skill:</string>
    <string name="skill">Skill</string>
    <string name="year_title">Year Of Experience:</string>
    <string name="year">year</string>
    <string name="apply">Apply</string>

</resources>