<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp"
    android:fillViewport="true">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:src="@drawable/suitcase"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/job_specialization"
                android:textSize="20sp"
                android:textAlignment="center"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/editTextCompanyName"
                android:layout_marginTop="20dp"
                android:padding="16dp"
                android:text="Kaion Enterprise"
                android:gravity="start|center_vertical"
                android:background="@drawable/border"
                android:editable="false"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/editTextJobTitle"
                android:layout_marginTop="20dp"
                android:padding="16dp"
                android:hint="@string/ask_job_title"
                android:gravity="start|center_vertical"
                android:background="@drawable/border"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/spinnerJobSpecialization"
                android:layout_marginTop="20dp"
                android:padding="16dp"
                android:entries="@array/job_specialization_group"
                android:gravity="start|center_vertical"
                android:background="@drawable/border"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/employment_type"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <RadioGroup
                android:id="@+id/radioGroupEmploymentType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:checkedButton="@id/radioButtonFullTime"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonFullTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/full_time" />

                <RadioButton
                    android:id="@+id/radioButtonPartTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/part_time" />

                <RadioButton
                    android:id="@+id/radioButtonInternship"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/internship" />
            </RadioGroup>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:id="@+id/editTextJobResponsibility"
                android:padding="16dp"
                android:hint="@string/job_responsibility"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:background="@drawable/border"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:id="@+id/editTextSkills"
                android:padding="16dp"
                android:hint="@string/skills"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:layout_marginTop="20dp"
                android:background="@drawable/border"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/editTextQualification"
                android:padding="16dp"
                android:hint="@string/qualification"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:layout_marginTop="20dp"
                android:background="@drawable/border"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/editTextYearExperience"
                android:padding="16dp"
                android:hint="@string/year_of_experience"
                android:inputType="number"
                android:layout_marginTop="20dp"
                android:background="@drawable/border"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/editTextNumberSalary"
                android:padding="16dp"
                android:hint="@string/salary"
                android:gravity="start|center_vertical"
                android:inputType="numberDecimal"
                android:layout_marginTop="20dp"
                android:background="@drawable/border"/>

            <Button
                android:id="@+id/buttonPost"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/post"
                app:cornerRadius="20dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</ScrollView>
