<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/outConstraint"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".job_update.JobUpdateFragment"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/leftIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:src="@drawable/round_arrow_back_ios_24" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/leftIcon"
            android:text="Job Update"
            android:textSize="25sp"
            tools:layout_editor_absoluteX="50dp"
            tools:layout_editor_absoluteY="11dp" />


    </androidx.appcompat.widget.Toolbar>
    <ScrollView xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        tools:context=".job_posting.JobPostingFragment"
        app:layout_constraintTop_toBottomOf="@+id/toolbarTop"
        app:layout_constraintStart_toStartOf="@+id/toolbarTop"
        app:layout_constraintEnd_toEndOf="@+id/toolbarTop"

        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:cardElevation="20dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:src="@drawable/suitcase" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/job_specialization"
                        android:textAlignment="center"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/editTextCompanyName"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/border"
                        android:editable="false"
                        android:gravity="start|center_vertical"
                        android:padding="16dp"
                        android:text="Kaion Enterprise" />

                    <EditText
                        android:id="@+id/editTextJobTitle"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/border"
                        android:gravity="start|center_vertical"
                        android:hint="@string/ask_job_title"
                        android:padding="16dp" />

                    <Spinner
                        android:id="@+id/spinnerJobSpecialization"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/border"
                        android:entries="@array/job_specialization_group"
                        android:gravity="start|center_vertical"
                        android:padding="16dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/employment_type"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:id="@+id/radioGroupEmploymentType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:checkedButton="@id/radioButtonFullTime"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radioButtonFullTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/full_time" />

                        <RadioButton
                            android:id="@+id/radioButtonPartTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/part_time" />

                        <RadioButton
                            android:id="@+id/radioButtonInternship"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/internship" />
                    </RadioGroup>

                    <EditText
                        android:id="@+id/editTextJobResponsibility"
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/border"
                        android:ems="10"
                        android:gravity="start|top"
                        android:hint="@string/job_responsibility"
                        android:inputType="textMultiLine"
                        android:padding="16dp" />

                    <EditText
                        android:id="@+id/editTextSkill"
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/border"
                        android:gravity="start|top"
                        android:hint="@string/skills"
                        android:inputType="textMultiLine"
                        android:padding="16dp" />

                    <EditText
                        android:id="@+id/editTextQualification"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/border"
                        android:gravity="start|top"
                        android:hint="@string/qualification"
                        android:inputType="textMultiLine"
                        android:padding="16dp" />

                    <EditText
                        android:id="@+id/editTextYearExperience"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/border"
                        android:hint="@string/year_of_experience"
                        android:inputType="number"
                        android:padding="16dp" />

                    <EditText
                        android:id="@+id/editTextNumberSalary"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/border"
                        android:gravity="start|center_vertical"
                        android:hint="@string/salary"
                        android:inputType="numberDecimal"
                        android:padding="16dp" />

                    <Button
                        android:id="@+id/buttonSave"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/save"
                        app:cornerRadius="20dp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>


